fix weird whitespace height problem

--- a/frontend/styles/app.scss
+++ b/frontend/styles/app.scss
@@ -36,7 +36,6 @@ img {
   margin-right: 1vw;
   max-height: 100%;
   max-width: 90vw;
-  min-height: 50%;
   min-width: 50%;
 
   &:first-of-type {
